# fast-api-jwt

./: .env  .env.development  .env.development.lambda  .env.template  .env.test  .gitignore  Dockerfile.fastapi  Dockerfile.lambda  README.md  article.md  compose.yml  config.yaml  pyproject.toml  pytest.ini  requirements.txt
config/: config.yaml
docs/: fast_api_jwt.html  index.html  search.js
docs/fast_api_jwt/: commands.html  config.html  service.html  tests.html  utils.html
docs/fast_api_jwt/commands/: app_message_queue.html  commands.html  lambda_handler.html
docs/fast_api_jwt/service/: admin.html  dependencies.html  main.html
docs/fast_api_jwt/tests/: test_router_account.html  test_router_main.html  test_router_storyspace.html
docs/fast_api_jwt/utils/: jwt_util.html
fast_api_jwt/: __init__.py  config.py
fast_api_jwt/commands/: app_message_queue.py  commands.py  lambda_handler.py
fast_api_jwt/commands/mqs/: message_queue.py  message_queue_facade_base.py  message_queue_facade_bunny.py  message_queue_facade_sqs.py
fast_api_jwt/database/: mock_db.py
fast_api_jwt/mq/: app_message_queue.py  bunny_queue.py  sqs_queue.py
fast_api_jwt/service/: __init__.py  admin.py  dependencies.py  main.py
fast_api_jwt/service/routers/: account_router.py  account_service.py  storyspace_router.py  storyspace_service.py
fast_api_jwt/tests/: __init__.py  conftest.py  test_router_account.py  test_router_main.py  test_router_storyspace.py  test_service_account.py  test_service_main.py  test_service_storyspace.py
fast_api_jwt/utils/: amazon_mq.py  jwt_util.py
script/: build.sh  docker-handler-sh.sh  docker-sh.sh  docker-start.sh  lint.sh  start-server.sh
