[tool.poetry]
name = "fast-api-jwt"
version = "0.2.0"
description = "A sample fast-api service that verifies a JWT with API key."
authors = ["Steven Miers <steven.miers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version="^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
boto3 = "^1.34.80"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.7.1"
autopep8 = "^2.1.0"
pdoc = "^14.4.0"
python-bunny-mq = { path = "/Users/windfox/src/python-bunny-mq", develop=true }

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 100
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3